2012-09-27  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE_MINI/board.h (NEUG_NON_DEFAULT_ADC_CHANNEL): New.
	(VAL_GPIOACRL): Use PA1 and PA2 for NeuG's analog input.
	(VAL_GPIOCCRL): Revert previous change.
	* boards/STBEE_MINI/mcuconf.h (STM32_PPRE2, STM32_ADCPRE): Revert.

	* src/main.c (RANDOM_BYTES_LENGTH): 32 is best for SHA-256
	construct.

	* src/random.c (adc2_stop, ep_process): New.
	(rng_gen): Call ep_process.

2012-09-26  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STM8S_DISCOVERY/mcuconf.h (STM32_PPRE2, STM32_ADCPRE):
	12MHz ADC clock gives us more speed.
	* boards/STM8S_DISCOVERY/board.h (VAL_GPIOCCRL): Digital push pull
	output 50MHz gives us more entropy.

	* boards/STBEE/mcuconf.h (STM32_PPRE2, STM32_ADCPRE): Ditto.
	* boards/STBEE/board.h (VAL_GPIOCCRL): Ditto.

	* boards/STBEE_MINI/mcuconf.h (STM32_PPRE2, STM32_ADCPRE): Ditto.
	* boards/STBEE_MINI/board.h (VAL_GPIOCCRL): Ditto.

	* boards/OLIMEX_STM32_H103/mcuconf.h (STM32_PPRE2, STM32_ADCPRE):
	Ditto.
	* boards/OLIMEX_STM32_H103/board.h (VAL_GPIOCCRL): Ditto.

	* boards/FST_01/mcuconf.h (STM32_PPRE2, STM32_ADCPRE): Ditto.
	* boards/FST_01/board.h (VAL_GPIOCCRL): Ditto.

	* boards/CQ_STARM/mcuconf.h (STM32_PPRE2, STM32_ADCPRE): Ditto.
	* boards/CQ_STARM/board.h (VAL_GPIOCCRL): Ditto.

2012-09-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (adc2_start): New function.
	(adcgrpcfg): Dual fast interleaved mode.
	(rng_gen): Four-byte at a time.
	(rng): Override DMA settings for 32-bit, and call adc2_start.

	* src/random.c (adcgrpcfg): To acquire more entropy and more speed,
	our choice is IN10 and IN11 (which is unconnected).

2012-09-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call neug_select.
	* src/random.c (neug_select): New.
	(rng_gen): Implement Raw output.
	(hash_df_initial_string): Fix (was: 32, no of bytes).
	(rng): Implement error recovery.

2012-09-19  Niibe Yutaka  <gniibe@fsij.org>

	* tool/neug_upgrade.py: New.

	* src/main.c (main): Support reGNUal.